// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success delete member 1`] = `
"<h4 class=\\"page-header\\"> Members
  <!--header-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"members-page\\">
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Show create new member form</button>
      <!--if-->
    </div>
    <div class=\\"container\\">
      <div class=\\"members-list\\">
        <div class=\\"panel\\">
          <div class=\\"pagination\\">
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
            <table>
              <thead>
                <tr>
                  <th>ID</th>
                  <th>Name</th>
                  <th>Email</th>
                  <th>Is superuser?</th>
                  <th></th>
                </tr>
              </thead>
              <tbody>
                <tr class=\\"\\">
                  <td>1</td>
                  <td>John Smith#1</td>
                  <td>john.smith.1@test.com</td>
                  <td class=\\"text-center\\">No</td>
                  <td class=\\"actions\\">
                    <button data-test-update-button=\\"1\\"> Edit </button>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"1\\"> Delete </button>
                  </td>
                </tr>
                <tr class=\\"\\">
                  <td>2</td>
                  <td>John Smith#2</td>
                  <td>john.smith.2@test.com</td>
                  <td class=\\"text-center\\">Yes</td>
                  <td class=\\"actions\\">
                    <button data-test-update-button=\\"2\\"> Edit </button>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"2\\"> Delete </button>
                  </td>
                </tr>
                <tr class=\\"\\">
                  <td>3</td>
                  <td>John Smith#3</td>
                  <td>john.smith.3@test.com</td>
                  <td class=\\"text-center\\">No</td>
                  <td class=\\"actions\\">
                    <button data-test-update-button=\\"3\\"> Edit </button>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"3\\"> Delete </button>
                  </td>
                </tr>
              </tbody>
            </table>
            <div class=\\"modal\\" data-test-modal=\\"\\"><span class=\\"close\\" title=\\"Close Modal\\" data-test-close-button=\\"\\">×</span>
              <!--if-->
              <div class=\\"modal-content\\">
                <div class=\\"container\\">
                  <h4>Delete member</h4>
                  <p class=\\"content\\">Are you sure you want to delete member with email \\"john.smith.1@test.com\\"?</p>
                  <div class=\\"footer\\">
                    <button data-test-ok-button=\\"\\" class=\\"btn-danger\\">Ok</button>
                    <button class=\\"btn-secondary\\" data-test-cancel-button=\\"\\">Cancel</button>
                  </div>
                </div>
              </div>
            </div>
            <!--ModalWindow-->
            <!--if-->
            <!--MembersTable-->
            <!--default-->
            <!--if-->
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
          </div>
        </div>
      </div>
      <!--if-->
    </div>
  </div>
  <!--body-->
</div>
<!--if-->
<!--Page-->
<!--ActivePageContainer-->"
`;

exports[`success delete member 2`] = `
"<h4 class=\\"page-header\\"> Members
  <!--header-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"members-page\\">
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Show create new member form</button>
      <!--if-->
    </div>
    <div class=\\"container\\">
      <div class=\\"members-list\\">
        <div class=\\"panel\\">
          <div class=\\"pagination\\">
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
            <table>
              <thead>
                <tr>
                  <th>ID</th>
                  <th>Name</th>
                  <th>Email</th>
                  <th>Is superuser?</th>
                  <th></th>
                </tr>
              </thead>
              <tbody>
                <tr class=\\"\\">
                  <td>2</td>
                  <td>John Smith#2</td>
                  <td>john.smith.2@test.com</td>
                  <td class=\\"text-center\\">Yes</td>
                  <td class=\\"actions\\">
                    <button data-test-update-button=\\"2\\"> Edit </button>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"2\\"> Delete </button>
                  </td>
                </tr>
                <tr class=\\"\\">
                  <td>3</td>
                  <td>John Smith#3</td>
                  <td>john.smith.3@test.com</td>
                  <td class=\\"text-center\\">No</td>
                  <td class=\\"actions\\">
                    <button data-test-update-button=\\"3\\"> Edit </button>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"3\\"> Delete </button>
                  </td>
                </tr>
              </tbody>
            </table>
            <!--if-->
            <!--MembersTable-->
            <!--default-->
            <!--if-->
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
          </div>
        </div>
      </div>
      <!--if-->
    </div>
  </div>
  <!--body-->
</div>
<!--if-->
<!--Page-->
<!--ActivePageContainer-->"
`;
